--- a/index.html
+++ b/index.html
@@ -1,21 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/bootstrap.rtl.css">
-    <link rel="stylesheet" href="styles/bootstrap.rtl.css.map">
-    <link rel="stylesheet" href="styles/style.css">
+<html lang="en" dir="rtl">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/bootstrap.rtl.css" />
+    <link rel="stylesheet" href="styles/bootstrap.rtl.css.map" />
+    <link rel="stylesheet" href="styles/style.css" />
     <title>Simple-Calculator</title>
-</head>
-<body>
-    
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+  </head>
+  <body class="center">
+    <div class="box">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="calc-name">
+            <h3>Calcu</h3>
+            <p>Javascript</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="display">
+            <input type="text">
+          </div>
+        </div>
+        <div class="row">
+          <div class="buttons">
+            <div class="radif1">
+              <input type="button" class="btnn" value="7">
+              <input type="button" class="btnn" value="8">
+              <input type="button" class="btnn" value="9">
+              <input type="button" class="btnn red" value="DEL">
+            </div>
+            <div class="radif1">
+              <input type="button" class="btnn" value="4">
+              <input type="button" class="btnn" value="5">
+              <input type="button" class="btnn" value="6">
+              <input type="button" class="btnn" value="+">
+            </div>
+            <div class="radif1">
+              <input type="button" class="btnn" value="1">
+              <input type="button" class="btnn" value="2">
+              <input type="button" class="btnn" value="3">
+              <input type="button" class="btnn" value="-">
+            </div>
+            <div class="radif1">
+              <input type="button" class="btnn" value=".">
+              <input type="button" class="btnn" value="0">
+              <input type="button" class="btnn" value="&divide;">
+              <input type="button" class="btnn" value="&times;">
+            </div>
+            <div class="radif1">
+              <input type="button" class="btnn" value="^">
+              <input type="button" class="btnn" value="&radic;">
+              <div class="equal">
+                <input type="button" class="btnn btnn2" value="=">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+      crossorigin="anonymous"
+    ></script>
     <script src="js/main.js"></script>
-</body>
+  </body>
 </html>
