--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
             </div>
             <div class="radif1">
               <input type="button" name="tavan" class="btnn" value="^" onclick="addtodis(tavan.value)">
-              <input type="button" name="radikal" class="btnn" value="&radic;" onclick="mathCal()">
+              <input type="button" name="radikal" class="btnn" value="&radic;" onclick="mathCal('sqrt')">
               <div class="equal">
-                <input type="button" name="equal" class="btnn btnn2" value="="onclick="final()">
+                <input type="button" class="btnn btnn2" value="=" onclick="final()">
               </div>
             </div>
           </form>
